- Solved the issue of client register image was not coming. - Managed the spacing of auth form wrapper with responsive. - Set the alignment of chat body in align of header and footer.

--- a/src/assets/CSS/chatcontainer.css
+++ b/src/assets/CSS/chatcontainer.css
@@ -56,7 +56,7 @@
 
 .chat-container .messages-container {
   width: 100%;
-  padding: 10px 15px;
+  padding: 10px 20px;
   height: calc(100vh - 261px);
   font-size: 14px;
   color: black; 
@@ -169,6 +169,10 @@
 .your-message .profile-img {
   width: 50px !important;
   height: 50px !important;
+  border: 1px solid #ff6c37;
+  border-radius: 50%;
+  object-fit: contain;
+  object-position: center;
 }
 
 
